Updated css to fix button alignment on hero

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -103,7 +103,7 @@ button:focus {
     -moz-appearance: none;
     position: absolute;
     top: 75%;
-    right: 25%;
+    left: 75%;
     transform: translate(-50%, -50%);
 }
 
